[workspace]
members = [
    "graft-proto",
    "graft-core",
    "graft-storage",
    "graft-transport",
    "graft-runtime",
    "graft-app-kv",
    "graft-tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
prost = "0.14"
prost-build = "0.14"
bytes = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
parking_lot = "0.12"
dashmap = "6"
indexmap = "2"
tempfile = "3"
