[package]
name = "graft-app-kv"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "graft-kv"
path = "src/main.rs"

[dependencies]
gautelis-graft-proto = { path = "../graft-proto" }
gautelis-graft-core = { path = "../graft-core" }
gautelis-graft-storage = { path = "../graft-storage" }
gautelis-graft-transport = { path = "../graft-transport" }
gautelis-graft-runtime = { path = "../graft-runtime" }
gautelis-graft-telemetry = { path = "../graft-telemetry" }
prost.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
parking_lot.workspace = true
