[package]
name = "graft-app-kv"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "graft-kv"
path = "src/main.rs"

[dependencies]
gautelis-graft-proto = { version = "0.1.0", path = "../graft-proto" }
gautelis-graft-core = { version = "0.1.0", path = "../graft-core" }
gautelis-graft-storage = { version = "0.1.0", path = "../graft-storage" }
gautelis-graft-transport = { version = "0.1.0", path = "../graft-transport" }
gautelis-graft-runtime = { version = "0.1.0", path = "../graft-runtime" }
gautelis-graft-telemetry = { version = "0.1.0", path = "../graft-telemetry" }
prost.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
parking_lot.workspace = true
