[package]
name = "graft-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
graft-proto = { path = "../graft-proto" }
prost.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
rand.workspace = true
parking_lot.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
