[package]
name = "gautelis-graft-core"
description = "Core types and traits for the Graft Raft consensus implementation"
repository = "https://github.com/FrodeRanders/raft"
version.workspace = true
edition.workspace = true
license.workspace = true


[lib]
name = "graft_core"

[dependencies]
gautelis-graft-proto = { version = "0.1.0", path = "../graft-proto" }
prost.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
rand.workspace = true
parking_lot.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
