[package]
name = "gautelis-graft-proto"
description = "Protobuf definitions for the Graft Raft consensus protocol"
repository = "https://github.com/FrodeRanders/raft"
version.workspace = true
edition.workspace = true
license.workspace = true


[lib]
name = "graft_proto"

[dependencies]
prost.workspace = true
bytes.workspace = true

[build-dependencies]
prost-build.workspace = true
