[package]
name = "gautelis-graft-runtime"
description = "Async runtime for Graft Raft node operation"
repository = "https://github.com/FrodeRanders/raft"
version.workspace = true
edition.workspace = true
license.workspace = true


[lib]
name = "graft_runtime"

[dependencies]
gautelis-graft-proto = { path = "../graft-proto" }
gautelis-graft-core = { path = "../graft-core" }
gautelis-graft-storage = { path = "../graft-storage" }
gautelis-graft-transport = { path = "../graft-transport" }
gautelis-graft-telemetry = { path = "../graft-telemetry" }
prost.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
parking_lot.workspace = true
rand.workspace = true
