[package]
name = "gautelis-graft-runtime"
description = "Async runtime for Graft Raft node operation"
repository = "https://github.com/FrodeRanders/raft"
version.workspace = true
edition.workspace = true
license.workspace = true


[lib]
name = "graft_runtime"

[dependencies]
gautelis-graft-proto = { version = "0.1.0", path = "../graft-proto" }
gautelis-graft-core = { version = "0.1.0", path = "../graft-core" }
gautelis-graft-storage = { version = "0.1.0", path = "../graft-storage" }
gautelis-graft-transport = { version = "0.1.0", path = "../graft-transport" }
gautelis-graft-telemetry = { version = "0.1.0", path = "../graft-telemetry" }
prost.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
parking_lot.workspace = true
rand.workspace = true
