[package]
name = "graft-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
graft-proto = { path = "../graft-proto" }
graft-core = { path = "../graft-core" }
prost.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
