[package]
name = "gautelis-graft-storage"
description = "File-based persistent storage for Graft Raft log and state"
repository = "https://github.com/FrodeRanders/raft"
version.workspace = true
edition.workspace = true
license.workspace = true


[lib]
name = "graft_storage"

[dependencies]
gautelis-graft-proto = { path = "../graft-proto" }
gautelis-graft-core = { path = "../graft-core" }
prost.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
