[package]
name = "gautelis-graft-telemetry"
description = "Telemetry and tracing for Graft Raft nodes"
repository = "https://github.com/FrodeRanders/raft"
version.workspace = true
edition.workspace = true
license.workspace = true


[lib]
name = "graft_telemetry"

[dependencies]
gautelis-graft-core = { version = "0.1.0", path = "../graft-core" }
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = []
otlp = ["reqwest"]
