[package]
name = "graft-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
graft-proto = { path = "../graft-proto" }
graft-core = { path = "../graft-core" }
graft-storage = { path = "../graft-storage" }
graft-transport = { path = "../graft-transport" }
graft-runtime = { path = "../graft-runtime" }
tokio.workspace = true
prost.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
rand.workspace = true
tempfile.workspace = true
