[package]
name = "graft-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
gautelis-graft-proto = { path = "../graft-proto" }
gautelis-graft-core = { path = "../graft-core" }
gautelis-graft-storage = { path = "../graft-storage" }
gautelis-graft-transport = { path = "../graft-transport" }
gautelis-graft-runtime = { path = "../graft-runtime" }
tokio.workspace = true
prost.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
rand.workspace = true
tempfile.workspace = true
