[package]
name = "graft-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
gautelis-graft-proto = { version = "0.1.0", path = "../graft-proto" }
gautelis-graft-core = { version = "0.1.0", path = "../graft-core" }
gautelis-graft-storage = { version = "0.1.0", path = "../graft-storage" }
gautelis-graft-transport = { version = "0.1.0", path = "../graft-transport" }
gautelis-graft-runtime = { version = "0.1.0", path = "../graft-runtime" }
tokio.workspace = true
prost.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
rand.workspace = true
tempfile.workspace = true
