[package]
name = "graft-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
graft-proto = { path = "../graft-proto" }
graft-core = { path = "../graft-core" }
prost.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
