[package]
name = "gautelis-graft-transport"
description = "Network transport codec for the Graft Raft protocol"
repository = "https://github.com/FrodeRanders/raft"
version.workspace = true
edition.workspace = true
license.workspace = true


[lib]
name = "graft_transport"

[dependencies]
gautelis-graft-proto = { version = "0.1.0", path = "../graft-proto" }
gautelis-graft-core = { version = "0.1.0", path = "../graft-core" }
prost.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
